--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,5 @@ application/temp/*
 /node_modules/
 /assets/js/app.js
 /assets/css/app.css
-/config/database.php
+/application/config/database.php
+/application/config/email.php
