--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ application/temp/*
 /node_modules/
 /assets/js/app.js
 /assets/css/app.css
+/application/config/database.php
 /application/config/email.php
 /nbproject/*
 /.metadata/
